# fns

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  imgui.ini
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
cmake/dependencies/: instant-ngp.cmake
example/: CMakeLists.txt  gui.cu
include/fns/: fns.h  nerfs.h  render.h
source/: fns.c  nerfs.c  render.c
test/: CMakeLists.txt
test/source/: fns_test.c
